runners/calculator: Don’t require math functions to be at the beginning or contain only letters

When the runner query does not start or end with `=`, a regex is used to
try to match math function signatures. Currently this regex requires the
function to be at the beginning of the query and only contain letters.
This causes queries like `1+sqrt(4)`, `log10(1000)` or `atan2(1,2)` to
not display any results.

This change updates the regex to match functions anywhere in the query.
Additionally it also allows matching functions that contain digits
(e.g. log10()).

Note that digits in the function name are allowed only at the end, this
causes functions that have a digit in the middle of their name (according
to the qalculate function list there are only two such functions:
`matrix2vector` and `unix2date`) to still fail to match, however they
still may be used by prefixing the query with `=`. Also trying to match
functions with digits in the middle of their name would just introduce
more complexity.

BUG: 496343